unpackaged/main/default/objects/FSL_Resolution_Code__c/FSL_Resolution_Code__c.object-meta.xml
<CustomObject>
    <label>FSL Resolution Code</label>
    <nameField>
        <label>FSL Resolution Codes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Resolution Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>