unpackaged/main/default/objects/FSL_Resolution_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>