unpackaged/main/default/objects/FSL_Resolution_Code__c/fields/Go_No_Go__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go__c</fullName>
    <formula>IF(BEGINS(Code__c, &quot;G&quot;), &quot;Go&quot;, IF(BEGINS(Code__c, &quot;N&quot;), &quot;No Go&quot;, IF(BEGINS(Code__c, &quot;R&quot;), &quot;NSR&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Go / No Go</label>
    <type>Text</type>
</CustomField>