unpackaged/main/default/objects/FSL_Resolution_Code__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>64</length>
    <type>Text</type>
</CustomField>