unpackaged/main/default/objects/FSL_Resolution_Code__c/fields/NSR_Codes__c.field-meta.xml
<CustomField>
    <fullName>NSR_Codes__c</fullName>
    <formula>IF(BEGINS(Code__c, &quot;R&quot;),&quot;NSR&quot;,IF(BEGINS(Code__c, &quot;X&quot;), &quot;Cancel&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSR Codes</label>
    <type>Text</type>
</CustomField>