unpackaged/main/default/objects/FSL_Resolution_Code__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <formula>MID(Code__c, 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Series</label>
    <type>Text</type>
</CustomField>