unpackaged/main/default/objects/FSL_Resolution_Code__c/fields/T_Code__c.field-meta.xml
<CustomField>
    <fullName>T_Code__c</fullName>
    <label>T-Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
                <label>T1 - Flat tire with a spare</label>
            </value>
            <value>
                <fullName>T3</fullName>
                <label>T3 - Battery related service</label>
            </value>
            <value>
                <fullName>T5</fullName>
                <label>T5 - Fuel delivery</label>
            </value>
            <value>
                <fullName>T6</fullName>
                <label>T6 - Tow</label>
            </value>
            <value>
                <fullName>T7</fullName>
                <label>T7 - Lockout</label>
            </value>
            <value>
                <fullName>7A</fullName>
                <label>7A - Key delivery</label>
            </value>
            <value>
                <fullName>7B</fullName>
                <label>7B - Locksmith service</label>
            </value>
            <value>
                <fullName>T8</fullName>
                <label>T8 - Extrication (Winch out)</label>
            </value>
            <value>
                <fullName>T9</fullName>
                <label>T9 - Miscellaneous</label>
            </value>
            <value>
                <fullName>T0</fullName>
                <label>T0 - GOA/Canceled Call</label>
            </value>
            <value>
                <fullName>3B</fullName>
                <label>3B - Battery Replacement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>