unpackaged/main/default/objects/FSL_Resolution_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Go_No_Go__c</columns>
    <columns>Series__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>