unpackaged/main/default/objects/FSL_Resolution_Code__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Go_No_Go__c</columns>
    <columns>Label__c</columns>
    <columns>Series__c</columns>
    <columns>NSR_Codes__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>